# mycelium

./: .gitignore  COMPLETIONS.md  Cargo.toml  DOCUMENTATION_AUDIT.md  GLUE_CODE_PLAN.md  LICENSE-APACHE  LICENSE-MIT  NETWORK_BEACON_SUMMARY.md  README.md  SECURITY.md  USER_GUIDE.md  deny.toml  example.myc.yaml  prd.json  verify_setup.sh
.cargo/: config.toml
.github/workflows/: ci.yml
.kiro/specs/mycelium-cli/: README.md  design.md  requirements.md  tasks.md
.kiro/specs/mycelium-logo/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
crates/myc-cli/: Cargo.toml
crates/myc-cli/src/: audit.rs  device.rs  enrollment.rs  env.rs  error_formatting.rs  exit_codes.rs  json_output.rs  key_storage.rs  lib.rs  main.rs  non_interactive.rs  output.rs  profile.rs  project_config.rs  prompts.rs  recovery.rs  retry.rs
crates/myc-cli/tests/: cross_platform_compatibility.rs  end_to_end_workflows.rs  error_scenarios.rs  gitignore_unit.rs  integrity_verification_properties.proptest-regressions  integrity_verification_properties.rs  key_storage_properties.rs  profile_isolation_properties.rs  push_diff_integration.rs  run_command_unit.rs  status_command_unit.rs
crates/myc-core/: Cargo.toml
crates/myc-core/src/: audit.rs  canonical.rs  device.rs  error.rs  formats.rs  ids.rs  lib.rs  membership_ops.rs  org.rs  pdk.rs  pdk_cache.rs  pdk_ops.rs  project.rs  recovery.rs  recovery_ops.rs  rotation.rs  secret_set.rs  secret_set_ops.rs
crates/myc-core/tests/: audit_event_properties.proptest-regressions  audit_event_properties.rs  format_properties.rs  id_properties.rs  membership_integration.rs  membership_signature_properties.rs  pdk_properties.rs  role_permission_properties.rs  secret_set_properties.proptest-regressions  secret_set_properties.rs  serialization_properties.proptest-regressions  serialization_properties.rs  validation_properties.rs
crates/myc-crypto/: Cargo.toml
crates/myc-crypto/src/: aead.rs  error.rs  hash.rs  kdf.rs  kex.rs  lib.rs  random.rs  sign.rs
crates/myc-crypto/tests/: aead_properties.rs  error_cases.rs  hash_properties.rs  kdf_properties.rs  sign_properties.rs
crates/myc-github/: Cargo.toml
crates/myc-github/src/: auth.rs  cache.rs  client.rs  error.rs  lib.rs  oidc.rs
crates/myc-github/tests/: cache_invalidation_properties.rs  concurrent_modification_properties.rs  github_client_unit.rs  oidc_validation.rs  repository_operations.rs
crates/myc-test-utils/: Cargo.toml
crates/myc-test-utils/src/: lib.rs
docs/: telemetry-breadcrumbs.md
examples/: network-beacon-usage.md
examples/workflows/: README.md
examples/workflows/basic-setup/: setup.sh
examples/workflows/ci-cd/: github-actions.yml
examples/workflows/enterprise/: recovery-setup.sh
examples/workflows/team-project/: setup-team.sh
mycelium-logo/: README.md
mycelium-logo/icon/: technical-specs.md
mycelium-logo/png/: README.md  conversion-guide.md
mycelium-logo/sketches/: design-notes.md
rfcs/: rfc-0000-index.json  rfc-0001-project-structure.json  rfc-0002-crypto-primitives.json  rfc-0003-data-model.json  rfc-0004-device-identity.json  rfc-0005-github-backend.json  rfc-0006-envelope-encryption.json  rfc-0007-secret-set-encryption.json  rfc-0008-membership.json  rfc-0009-rotation-revocation.json  rfc-0010-cli-architecture.json  rfc-0011-ci-headless.json  rfc-0012-audit-integrity.json  rfc-0013-key-recovery.json  rfc-0014-cli-ux.json
scripts/: README.md  architecture_diagram.py  requirements.txt
supply-chain/: config.toml
