[workspace]
resolver = "2"
members = [
    "crates/myc-crypto",
    "crates/myc-core",
    "crates/myc-github",
    "crates/myc-cli",
    "crates/myc-test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mycelium/mycelium"

[workspace.dependencies]
# Workspace crates
myc-crypto = { path = "crates/myc-crypto" }
myc-core = { path = "crates/myc-core" }
myc-github = { path = "crates/myc-github" }
myc-test-utils = { path = "crates/myc-test-utils" }

# Cryptography
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
rand_core = "0.6"
rand = "0.8"
getrandom = "0.2"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
base64 = "0.21"

# CLI
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GitHub Integration
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
octocrab = "0.34"
jsonwebtoken = "9.2"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
