[package]
name = "myc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI binary for Mycelium secrets management"

[lib]
name = "myc_cli"
path = "src/lib.rs"

[[bin]]
name = "myc"
path = "src/main.rs"

[dependencies]
# Workspace crates
myc-crypto.workspace = true
myc-core.workspace = true
myc-github.workspace = true

# HTTP client
reqwest.workspace = true

# CLI
tokio.workspace = true
clap.workspace = true
clap_complete = "4.4"
dialoguer = { workspace = true, features = ["fuzzy-select"] }
console.workspace = true
indicatif.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
time.workspace = true
uuid.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Key derivation
argon2.workspace = true
rand_core.workspace = true
rand.workspace = true
base64.workspace = true
zeroize.workspace = true

[dev-dependencies]
myc-test-utils.workspace = true
tempfile.workspace = true
proptest.workspace = true
