[package]
name = "myc-github"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GitHub API client and authentication for Mycelium"

[dependencies]
# GitHub integration
reqwest.workspace = true
octocrab.workspace = true
jsonwebtoken.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
tempfile.workspace = true

[lib]
doctest = false
